force-app/main/default/objects/Prior_EOB_Symphony__c/Prior_EOB_Symphony__c.object-meta.xml
<CustomObject>
    <description>Summary of Benefits</description>
    <label>SOB</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior EOB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOBs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>