force-app/main/default/objects/Prior_EOB_Symphony__c/fields/AVG_PREM_PMPM__c.field-meta.xml
<CustomField>
    <fullName>AVG_PREM_PMPM__c</fullName>
    <label>AVG PREM PMPM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>