force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_Coinsurance_INN__c.field-meta.xml
<CustomField>
    <fullName>Current_Coinsurance_INN__c</fullName>
    <label>Current Coinsurance INN</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>