force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_Coinsurance_OON__c.field-meta.xml
<CustomField>
    <fullName>Current_Coinsurance_OON__c</fullName>
    <label>Current Coinsurance OON</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>