force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_Family_Deductible_In_Network__c.field-meta.xml
<CustomField>
    <fullName>Current_Family_Deductible_In_Network__c</fullName>
    <label>Current Family Deductible In Network</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>