force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_Individual_Deductible_OON__c.field-meta.xml
<CustomField>
    <fullName>Current_Individual_Deductible_OON__c</fullName>
    <label>Current Individual Deductible OON</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>