force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_OOP_max_Individual_INN__c.field-meta.xml
<CustomField>
    <fullName>Current_OOP_max_Individual_INN__c</fullName>
    <label>Current OOP max Individual INN</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>