force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_OOP_max_Individual_OON__c.field-meta.xml
<CustomField>
    <fullName>Current_OOP_max_Individual_OON__c</fullName>
    <label>Current OOP max Individual OON</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>