force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_premium_PMPM_Family_INN__c.field-meta.xml
<CustomField>
    <fullName>Current_premium_PMPM_Family_INN__c</fullName>
    <label>Current premium Family INN</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>