force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_premium_PMPM_Individual_IN__c.field-meta.xml
<CustomField>
    <fullName>Current_premium_PMPM_Individual_IN__c</fullName>
    <label>Current premium Individual INN</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>