force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_Rx_Tier_One_Copay__c.field-meta.xml
<CustomField>
    <fullName>Current_Rx_Tier_One_Copay__c</fullName>
    <label>Current Rx Tier One Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>