force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Current_Rx_Tier_Two_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Current_Rx_Tier_Two_Coinsurance__c</fullName>
    <label>Current Rx Tier Two Coinsurance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>