force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XXX Opportunity DELETE</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SOBs</relationshipLabel>
    <relationshipName>Prior_EOBs</relationshipName>
    <type>Lookup</type>
</CustomField>