force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Target_Deductible_Family_INN__c.field-meta.xml
<CustomField>
    <fullName>Target_Deductible_Family_INN__c</fullName>
    <label>Target Deductible Family INN</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>