force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Target_Deductible_Family_ONN__c.field-meta.xml
<CustomField>
    <fullName>Target_Deductible_Family_ONN__c</fullName>
    <label>Target Deductible Family OON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>