force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Target_INN_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Target_INN_Coinsurance__c</fullName>
    <label>Target INN Coinsurance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>