force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Target_OON_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Target_OON_Coinsurance__c</fullName>
    <label>Target OON Coinsurance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>