force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Target_OOP_Max_Individual_INN__c.field-meta.xml
<CustomField>
    <fullName>Target_OOP_Max_Individual_INN__c</fullName>
    <label>Target OOP Max Individual INN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>