force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Target_OOP_Max_Individual_OON__c.field-meta.xml
<CustomField>
    <fullName>Target_OOP_Max_Individual_OON__c</fullName>
    <label>Target OOP Max Individual OON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>