force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Target_Rx_Tier_Four_Copay__c.field-meta.xml
<CustomField>
    <fullName>Target_Rx_Tier_Four_Copay__c</fullName>
    <label>Target Rx Tier Four Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>