force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Target_Rx_Tier_One_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Target_Rx_Tier_One_Coinsurance__c</fullName>
    <label>Target Rx Tier One Coinsurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>