force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Total_Average_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Average_Premium__c</fullName>
    <label>Total Average Premium</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>