force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Total_Deductible_Family_OON__c.field-meta.xml
<CustomField>
    <fullName>Total_Deductible_Family_OON__c</fullName>
    <label>Total Deductible Family OON</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>