force-app/main/default/objects/Prior_EOB_Symphony__c/fields/Total_OOP_Max_Individual_in_Network__c.field-meta.xml
<CustomField>
    <fullName>Total_OOP_Max_Individual_in_Network__c</fullName>
    <label>Total OOP Max Individual in Network</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>